[package]
name = "runner-types"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.217", features = ["derive"] }
solana-account = { version = "=2.1.13", features = ["bincode"]}
solana-hash = {version = "=2.1.13", features = ["serde"]}
solana-program = {version = "=2.1.13"}
solana-pubkey = {version = "=2.1.13", features = ["serde"]}
solana-sha256-hasher = {version = "=2.1.13", features = ["sha2"]}
solana-transaction = { workspace = true }
